--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
   width: 86px;
   height: 40px;
   margin-top: 36px;
+  background: none;
 }
 .landing{
   width: 1215px;
@@ -61,10 +62,6 @@
   border: 2px solid #19CC56;
   color: #19CC56;
   }
-
-.landing header div a:hover{
-  padding: 6.5px 42.4px;
-}
 
 .landing > header > div > a:hover{
   background: #19CC56;
@@ -117,17 +114,15 @@
   color: #19CC56;
 }
 .home1 .home-text div a:hover{
-  padding: 14.5px 18px;
   border: 1px solid #19CC56;
   background: #19CC56;
   color: #ffffff;
 }
 a img{
   position: relative;
-  bottom: 30px;
   left: 541px;
   background: none;
 }
 a image .active{
-  transform: rotate(180deg);
+  transform: rotate(90deg);
 }
