--- a/src/index.css
+++ b/src/index.css
@@ -147,6 +147,7 @@ a image .active{
   background-color: #ffffff;
   margin-top: 20px;
   padding-top: 100px;
+  padding-bottom: 120px;
 }
 
 .services .what-we-do h3{
@@ -169,7 +170,7 @@ a image .active{
   display: block;
   padding: 30px;
   margin-top: 80px;
-  margin-bottom: 120px;
+  /* margin-bottom: 120px; */
   background: linear-gradient(90deg, rgba(241, 255, 246, 0.86) 0%, rgba(248, 248, 248, 0.86) 101.67%);
   box-shadow: 0px 4px 12px rgba(51, 51, 51, 0.1);
   border-radius: 12px;
@@ -220,9 +221,78 @@ a image .active{
   font-size: 36px;
   line-height: 45px;
 }
-
-
-
+.services .trending .t-books{
+  display: flex;
+  flex-direction: row;
+  margin-top: 60px;
+  gap: 20px;
+}
+.services .trending .t-books .t-book .t-img img{
+  background: none;
+  position: relative;
+  width: 152px; 
+  height: 236px;
+  left: 77px;
+  top: 38px;
+}
+.services .trending .t-books .t-book .t-img1 img{
+  background: none;
+  position: relative;
+  width: 200px; 
+  height: 310px;
+  left: 50px;
+  top: 8px;
+}
+.services .trending .t-books .t-book .t-img{
+  background-color: #E2E2E2B2;
+  height: 320px;
+}
+.services .trending .t-books .t-book .t-img1{
+  background-color: #E2E2E2B2;
+  height: 320px;
+}
+.services .trending .t-books .t-book .t-content{
+  background: #FFFFFF;
+  box-shadow: 0px 4px 8px rgba(51, 51, 51, 0.1);
+  border-radius: 0px 0px 12px 12px;
+  height: 144px;
+  display: block;
+  padding-top: 17px;
+}
+.services .trending .t-books .t-book .t-content h5{
+  text-align: center;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 30px;
+  letter-spacing: 0em;
+  color: #5E5A5E;
+}
+.services .trending .t-books .t-book .t-content h6{
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 25px;
+  letter-spacing: 0em;
+  color: #5E5A5E;
+}
+.services .trending .t-books .t-book .t-content div{
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  margin-top: 20px;
+}
+.services .trending .t-books .t-book .t-content div button{
+  background-color: #19CC56;
+  color: #ffffff;
+  border-radius: 10px;
+  padding: 10px;
+  width: 120px;
+  height: 40px;
+  border: none;
+}
+.services .trending .t-books .t-book{
+  width: 315px;
+}
 
 .services a img{
   position: relative;
