--- a/src/index.css
+++ b/src/index.css
@@ -261,7 +261,7 @@ a image .active{
 }
 .services .trending .t-books .t-book .t-content h5{
   text-align: center;
-  font-size: 24px;
+  font-size: 22px;
   font-weight: 500;
   line-height: 30px;
   letter-spacing: 0em;
@@ -269,7 +269,7 @@ a image .active{
 }
 .services .trending .t-books .t-book .t-content h6{
   text-align: center;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 400;
   line-height: 25px;
   letter-spacing: 0em;
@@ -293,10 +293,43 @@ a image .active{
 .services .trending .t-books .t-book{
   width: 315px;
 }
-
 .services a img{
   position: relative;
   left: 625px;
   background: none;
   top: 30px; 
+}
+
+.services .nav-buttons{
+  margin-top: 88px;
+  margin-bottom: 56px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  position: relative;
+  left: 410px;
+}
+/* .nav-buttons{
+  margin-top: 88px;
+  margin-bottom: 56px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  position: relative;
+  left: 410px;
+} */
+.nav-buttons div{
+  width: 86px;
+  height: 8px;
+  background: #E2E2E2;
+  border-radius: 4px;
+  border: none;
+}
+.nav-buttons div:hover{
+  background: #19CC56;
+}
+.nav-buttons .active{
+  background: #19CC56;
 }
