--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 
 body{
   background: linear-gradient(90deg, rgba(241, 255, 246, 0.86) 0%, rgba(248, 248, 248, 0.86) 101.67%);
+  overflow-x: hidden;
 }
 
 .landing > header > img{
@@ -332,4 +333,116 @@ a image .active{
 }
 .nav-buttons .active{
   background: #19CC56;
+}
+
+.others > .other{
+  padding-left: 65px;
+  padding-right: 65px;
+  background-color: #ffffff;
+  margin-top: 20px;
+  padding-top: 100px;
+  padding-bottom: 120px;
+}
+
+.others .other h2{
+  text-align: center;
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 45px;
+  letter-spacing: 0em;
+}
+
+.others .other .search-bar{
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
+  margin-top: 50px;
+  justify-content: center;
+  align-items: center;
+}
+.others .other .search-bar div{
+  display: flex;
+  flex-direction: row;
+  gap: 90px;
+  width: 420px;
+  height: 56px;
+  border: 1px solid #5E5A5E;
+  border-radius: 32px;
+  justify-content: center;
+  align-items: center;
+}
+.others .other .search-bar div select{
+  background: none;
+  border: none;
+}
+
+.others .other .search-bar input{
+  width: 860px;
+  height: 56px;
+  border: 1px solid #5E5A5E;
+  border-radius: 32px;
+}
+
+.others .other .t-books{
+  display: flex;
+  flex-direction: row;
+  margin-top: 100px;
+  gap: 20px;
+}
+.others .other .t-books .t-book .t-img img{
+  background: none;
+  position: relative;
+  width: 152px; 
+  height: 236px;
+  left: 77px;
+  top: 38px;
+}
+
+.others .other .t-books .t-book .t-img{
+  background-color: #E2E2E2B2;
+  height: 320px;
+}
+
+
+.others .other .t-books .t-book .t-content{
+  background: #FFFFFF;
+  box-shadow: 0px 4px 8px rgba(51, 51, 51, 0.1);
+  border-radius: 0px 0px 12px 12px;
+  height: 144px;
+  display: block;
+  padding-top: 17px;
+}
+.others  .other .t-books .t-book .t-content h5{
+  text-align: center;
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 30px;
+  letter-spacing: 0em;
+  color: #5E5A5E;
+}
+.others .other .t-books .t-book .t-content h6{
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 25px;
+  letter-spacing: 0em;
+  color: #5E5A5E;
+}
+.others .other .t-books .t-book .t-content div{
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  margin-top: 20px;
+}
+.others .other .t-books .t-book .t-content div button{
+  background-color: #19CC56;
+  color: #ffffff;
+  border-radius: 10px;
+  padding: 10px;
+  width: 120px;
+  height: 40px;
+  border: none;
+}
+.others  .other .t-books .t-book{
+  width: 315px;
 }
