--- a/src/index.css
+++ b/src/index.css
@@ -131,9 +131,9 @@ body{
   top: 30px; 
 }
 
-a image .active{
+/* a image:hover{
   transform: rotate(90deg);
-}
+} */
 
 /* Services page */
 .services{
@@ -446,3 +446,111 @@ a image .active{
 .others  .other .t-books .t-book{
   width: 315px;
 }
+
+.others .reviews-ratings{
+  padding-left: 65px;
+  padding-right: 65px;
+}
+
+.others .reviews-ratings h2{
+  text-align: center;
+  padding-top: 50px;
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 45px;
+  letter-spacing: 0em;
+} 
+.others .reviews-ratings .reviews-column{
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  margin-top: 60px;
+}
+
+.others .reviews-ratings .reviews-column .reviews{
+  width: 310px;
+  height: 290px;
+  padding: 27px;
+  background-color: #ffffff;
+  text-align: left;
+  box-shadow: 0px 4px 8px rgba(51, 51, 51, 0.1);
+  border-radius: 12px;
+}
+.others .reviews-ratings .reviews-column .reviews .author{
+  position: relative;
+  left: 85px;
+  bottom: 70px;
+  text-align: left;
+  font-size: 22px;
+  font-weight: 600;
+  line-height: 30px;
+  letter-spacing: 0em;
+  text-align: left;
+
+}
+.others .reviews-ratings .reviews-column .reviews .occupation{
+  position: relative;
+  bottom: 45px;
+  right: 30px;
+  text-align: left;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0em;
+  color: #AEADAE;
+}
+.others .reviews-ratings .reviews-column .reviews p{
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0em;
+  text-align: left;
+ margin-top: -10px;
+}
+
+.others .nav-buttons{
+  margin-top: 88px;
+  margin-bottom: 56px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  position: relative;
+  left: 520px;
+}
+
+.others hr{
+  width: 1200px;
+  margin: 120px auto;
+  border-style: dashed;
+  color: #AEADAE;
+}
+
+.others div h3{
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 35px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #353135;
+  margin-top: -60px;
+}
+.others div .your-review{
+  margin-top: 60px;
+  margin-bottom: 30px;
+  position: relative;
+  left: 380px;
+}
+.others div .your-review button{
+  padding: 17.5px;
+  position: relative;
+  bottom: 20.1px;
+  border-radius: 0 30px 30px 0;
+  background-color: #19CC56;
+  color: #ffffff;
+  border: none;
+}
+.others div .your-review textarea{
+  border-radius: 30px 0 0 30px;
+  border: 1px solid #5E5A5E;
+}
+ 
