--- a/src/index.css
+++ b/src/index.css
@@ -553,4 +553,22 @@ body{
   border-radius: 30px 0 0 30px;
   border: 1px solid #5E5A5E;
 }
- 
+
+.footer{
+  padding: 40px 65px;
+}
+
+.footer div .terms-and-condition{
+  margin-top: 100px;
+  display: flex;
+  flex-direction: row;
+}
+.footer div .terms-and-condition .terms-text{
+  display: flex;
+  flex-direction: column;
+  width: 600px;
+  height: 330px;
+}
+.footer div .terms-and-condition .terms-text hr{
+  width: 20px;
+}
