--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lexend:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 
 *{
   margin: 0;
@@ -631,19 +633,36 @@ body{
 }
 
 .footer footer{
-  margin-top: 100px;
+  font-family: Inter;
+  margin: 100px -65px -40px -65px;
   background: #3FD472;
   color: #ffffff;
-  margin-left: -65px;
-  margin-right: -65px;
-  margin-bottom: -40px;
-  padding-left: 65px;
-  padding-right: 65px;
-  padding-bottom: 40px;
+  padding: 0 65px 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 0;
+  align-items: center;
+  justify-content: center;
 }
 .footer footer .footer-links{
   display: flex;
   flex-direction: row;
   gap: 20px;
+  margin: 0;
 }
 
+.footer footer h3{
+  text-align: center;
+  padding-top: 20px;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0.02;
+  color: #ffffff;
+  margin: 0;
+}
+
+.footer footer hr{
+  margin: 0;
+  color: #ffffff;
+}
