--- a/src/index.css
+++ b/src/index.css
@@ -648,7 +648,16 @@ body{
   display: flex;
   flex-direction: row;
   gap: 20px;
-  margin: 0;
+  margin: 35px 0 0 0;
+}
+.footer footer .footer-links a{
+  text-decoration: none;
+  color: #ffffff;
+}
+.footer footer .footer-links select{
+  background: none;
+  border: none;
+  color: #ffffff;
 }
 
 .footer footer h3{
@@ -659,10 +668,22 @@ body{
   line-height: 24px;
   letter-spacing: 0.02;
   color: #ffffff;
-  margin: 0;
+  margin: 0 0 20px 0;
 }
 
 .footer footer hr{
-  margin: 0;
-  color: #ffffff;
+  margin: 31px 0 16px;
+  width: 1350px;
+  height: 0px;
+  border: 1px dashed #FFFFFF;
+  
+}
+.footer footer p{
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  text-align: center;
+  height: 56px;
+  width: 651px;
 }
