--- a/src/index.css
+++ b/src/index.css
@@ -220,37 +220,39 @@ body{
   font-size: 36px;
   line-height: 45px;
 }
-.services .trending .t-books{
+.t-books{
   display: flex;
   flex-direction: row;
   margin-top: 60px;
   gap: 20px;
 }
-.services .trending .t-books .t-book .t-img img{
+.t-books .t-book .t-img img{
   background: none;
   position: relative;
   width: 152px; 
   height: 236px;
   left: 77px;
   top: 38px;
+  margin-top: 10px;
 }
-.services .trending .t-books .t-book .t-img1 img{
+.t-books .t-book .t-img1 img{
   background: none;
   position: relative;
   width: 200px; 
   height: 310px;
   left: 50px;
   top: 8px;
+  margin-top: 10px;
 }
-.services .trending .t-books .t-book .t-img{
+.t-books .t-book .t-img{
   background-color: #E2E2E2B2;
-  height: 320px;
+  height: 350px;
 }
-.services .trending .t-books .t-book .t-img1{
+.t-books .t-book .t-img1{
   background-color: #E2E2E2B2;
-  height: 320px;
+  height: 350px;
 }
-.services .trending .t-books .t-book .t-content{
+.t-books .t-book .t-content{
   background: #FFFFFF;
   box-shadow: 0px 4px 8px rgba(51, 51, 51, 0.1);
   border-radius: 0px 0px 12px 12px;
@@ -258,7 +260,7 @@ body{
   display: block;
   padding-top: 17px;
 }
-.services .trending .t-books .t-book .t-content h5{
+.t-books .t-book .t-content h5{
   text-align: center;
   font-size: 22px;
   font-weight: 500;
@@ -266,7 +268,7 @@ body{
   letter-spacing: 0em;
   color: #5E5A5E;
 }
-.services .trending .t-books .t-book .t-content h6{
+.t-books .t-book .t-content h6{
   text-align: center;
   font-size: 16px;
   font-weight: 400;
@@ -274,13 +276,13 @@ body{
   letter-spacing: 0em;
   color: #5E5A5E;
 }
-.services .trending .t-books .t-book .t-content div{
+.t-books .t-book .t-content div{
   display: flex;
   flex-direction: row;
   gap: 30px;
   margin-top: 20px;
 }
-.services .trending .t-books .t-book .t-content div button{
+.t-books .t-book .t-content div button{
   background-color: #19CC56;
   color: #ffffff;
   border-radius: 10px;
@@ -289,8 +291,8 @@ body{
   height: 40px;
   border: none;
 }
-.services .trending .t-books .t-book{
-  width: 315px;
+.t-books .t-book{
+  width: 290px;
 }
 .services a img{
   position: relative;
@@ -389,69 +391,6 @@ body{
   padding-left: 18px;
 }
 
-.others .other .t-books{
-  display: flex;
-  flex-direction: row;
-  margin-top: 100px;
-  gap: 20px;
-}
-.others .other .t-books .t-book .t-img img{
-  background: none;
-  position: relative;
-  width: 152px; 
-  height: 236px;
-  left: 77px;
-  top: 38px;
-}
-
-.others .other .t-books .t-book .t-img{
-  background-color: #E2E2E2B2;
-  height: 320px;
-}
-
-
-.others .other .t-books .t-book .t-content{
-  background: #FFFFFF;
-  box-shadow: 0px 4px 8px rgba(51, 51, 51, 0.1);
-  border-radius: 0px 0px 12px 12px;
-  height: 144px;
-  display: block;
-  padding-top: 17px;
-}
-.others  .other .t-books .t-book .t-content h5{
-  text-align: center;
-  font-size: 22px;
-  font-weight: 500;
-  line-height: 30px;
-  letter-spacing: 0em;
-  color: #5E5A5E;
-}
-.others .other .t-books .t-book .t-content h6{
-  text-align: center;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 25px;
-  letter-spacing: 0em;
-  color: #5E5A5E;
-}
-.others .other .t-books .t-book .t-content div{
-  display: flex;
-  flex-direction: row;
-  gap: 30px;
-  margin-top: 20px;
-}
-.others .other .t-books .t-book .t-content div button{
-  background-color: #19CC56;
-  color: #ffffff;
-  border-radius: 10px;
-  padding: 10px;
-  width: 120px;
-  height: 40px;
-  border: none;
-}
-.others  .other .t-books .t-book{
-  width: 315px;
-}
 
 .others .reviews-ratings{
   padding-left: 65px;
