--- a/src/index.css
+++ b/src/index.css
@@ -225,6 +225,8 @@ body{
   flex-direction: row;
   margin-top: 60px;
   gap: 20px;
+  margin-bottom: 10px;
+  overflow-x: scroll;
 }
 .t-books .t-book .t-img img{
   background: none;
@@ -393,7 +395,7 @@ body{
 
 
 .others .reviews-ratings{
-  padding-left: 65px;
+  padding-left: 35px;
   padding-right: 65px;
 }
 
@@ -410,10 +412,11 @@ body{
   flex-direction: row;
   gap: 20px;
   margin-top: 60px;
+  overflow-x: scroll;
 }
 
 .others .reviews-ratings .reviews-column .reviews{
-  width: 310px;
+  width: 250px;
   height: 290px;
   padding: 27px;
   background-color: #ffffff;
