--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   /* background: linear-gradient(90deg, rgba(241, 255, 246, 0.86) 0%, rgba(248, 248, 248, 0.86) 101.67%); */
   padding: 0;
   font-family: 'lexend';
+  scroll-behavior: smooth;
 }
 
 body{
@@ -301,15 +302,17 @@ body{
   left: 625px;
   background: none;
   top: 30px; 
-  animation: dance 2s infinite;
 }
+.services a img:hover{
+    animation: dance 3s infinite;
+  }
 @keyframes dance{
   0%{
-    transform: translateY(-10px);
+    transform: translateY(-20px);
   }
 
   100%{
-    transform: translateY(10px);
+    transform: translateY(20px);
   }
 }
 
