--- a/src/index.css
+++ b/src/index.css
@@ -669,10 +669,13 @@ body{
   width: 100%;
   margin-bottom: 40px;
   margin-top: 8px;
-  padding-bottom: 5px;
+  padding-bottom: 8px;
   font-size: 16px;
-  border: 0 0 1px 0;
-  border-color: #353135;
+  /* border: 0 0 1px 0;
+  border-color: #353135; */
+  border-top: 1px;
+  border-left: 1px;
+  border-right: 1px;
 }
 .page-content .inputs label{
   font-size: 24px;
