--- a/src/index.css
+++ b/src/index.css
@@ -700,9 +700,12 @@ body{
   padding: 10px 0;
   border-radius: 16px;
   width: 194px;
-}
+  position: relative;
+  left: 32%;
+  }
+
 .page-content .button2{
-  margin: 40px auto 94px;
+  margin: 10px auto 94px;
   background-color: #19CC56;
   color:#ffffff;
   border: none;
@@ -710,6 +713,8 @@ body{
   padding: 10px 0;
   border-radius: 16px;
   width: 194px;
+  position: relative;
+  left: 32%;
 }
 
 
