--- a/src/index.css
+++ b/src/index.css
@@ -678,7 +678,7 @@ body{
   border-top: 1px;
   border-left: 1px;
   border-right: 1px;
-  border-color: #5E5A5E;
+  border-color: #AEADAE;
   font-family: Lexend;
 }
 .page-content .inputs label{
