--- a/src/index.css
+++ b/src/index.css
@@ -477,7 +477,11 @@ body{
   line-height: 26px;
   letter-spacing: 0em;
   text-align: left;
- margin-top: -10px;
+  margin-top: -10px;
+}
+.others .reviews-ratings .reviews-column .reviews .stars{
+  position: relative;
+  top: 10px;
 }
 
 .others .nav-buttons{
@@ -688,6 +692,7 @@ body{
   border-right: 1px;
   border-color: #AEADAE;
   font-family: Lexend;
+  outline: none;
 }
 .page-content .inputs label{
   font-size: 24px;
