--- a/src/index.css
+++ b/src/index.css
@@ -76,6 +76,7 @@ body{
   background: #19CC56;
   color: #ffffff;
   border: 1px solid #19CC56;
+  scale: 1.1;
 }
 
 .home1 img{
@@ -127,6 +128,7 @@ body{
   border: 1px solid #19CC56;
   background: #19CC56;
   color: #ffffff;
+  scale: 1.1;
 }
 
 
