--- a/src/index.css
+++ b/src/index.css
@@ -76,7 +76,7 @@ body{
   background: #19CC56;
   color: #ffffff;
   border: 1px solid #19CC56;
-  scale: 1.1;
+  scale: 1.3;
 }
 
 .home1 img{
@@ -129,6 +129,9 @@ body{
   background: #19CC56;
   color: #ffffff;
   scale: 1.1;
+  /* transform-origin: 0; */
+  transition-duration: 1s;
+  transition-delay: 1ms;
 }
 
 
