--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,11 @@ body{
   font-weight: 400;
   color: #353135;
 }
+.landing >header > nav> a:hover{
+  scale: 1.2;
+  transition-duration: 0.5s;
+  transition-delay: 1ms;
+}
 .landing >header > nav> select{
   text-decoration: none;
   margin-left: 52.5px;
@@ -58,6 +63,11 @@ body{
   width: 100px;
   margin-top: -8px;
   background: none;
+}
+.landing >header > nav> select:hover{
+  scale: 1.1;
+  transition-duration: 0.5s;
+  transition-delay: 1ms;
 }
 .landing > header > div > a{
   text-decoration: none;
