--- a/src/index.css
+++ b/src/index.css
@@ -164,6 +164,7 @@ body{
   margin-top: 20px;
   padding-top: 100px;
   padding-bottom: 120px;
+  /* overflow-x: scroll; */
 }
 
 .services .what-we-do h3{
@@ -238,14 +239,97 @@ body{
   font-size: 36px;
   line-height: 45px;
 }
-.t-books{
+/* .t-books{
   display: flex;
   flex-direction: row;
   margin-top: 60px;
   gap: 20px;
   margin-bottom: 10px;
-  overflow-x: scroll;
+  /* overflow-x: scroll; */
+ 
+.t-book .t-img img{
+  background: none;
+  position: relative;
+  width: 152px; 
+  height: 236px;
+  left: 77px;
+  top: 38px;
+  margin-top: 10px;
 }
+.t-book .t-img1 img{
+  background: none;
+  position: relative;
+  width: 200px; 
+  height: 310px;
+  left: 50px;
+  top: 8px;
+  margin-top: 10px;
+}
+.t-book .t-img{
+  background-color: #E2E2E2B2;
+  height: 350px;
+}
+.t-book .t-img1{
+  background-color: #E2E2E2B2;
+  height: 350px;
+}
+.t-book .t-content{
+  background: #FFFFFF;
+  box-shadow: 0px 4px 8px rgba(51, 51, 51, 0.1);
+  border-radius: 0px 0px 12px 12px;
+  height: 144px;
+  display: block;
+  padding-top: 17px;
+}
+.t-book .t-content h5{
+  text-align: center;
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 30px;
+  letter-spacing: 0em;
+  color: #5E5A5E;
+}
+.t-book .t-content h6{
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 25px;
+  letter-spacing: 0em;
+  color: #5E5A5E;
+}
+.t-book .t-content div{
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  margin-top: 20px;
+}
+.t-book .t-content div .stars{
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  margin-top: 12px;
+  margin-left: 20px;
+}
+.t-book .t-content div button{
+  background-color: #19CC56;
+  color: #ffffff;
+  border-radius: 10px;
+  padding: 10px;
+  width: 120px;
+  height: 40px;
+  border: none;
+}
+.t-book{
+  width: 290px;
+}
+/* .t-books{
+  display: flex;
+  flex-direction: row;
+  margin-top: 60px;
+  gap: 20px;
+  margin-bottom: 10px;
+  /* overflow-x: scroll; */
+/* }
 .t-books .t-book .t-img img{
   background: none;
   position: relative;
@@ -320,7 +404,7 @@ body{
 }
 .t-books .t-book{
   width: 290px;
-}
+} */ */
 .services a img{
   position: relative;
   left: 625px;
