--- a/src/index.css
+++ b/src/index.css
@@ -426,16 +426,10 @@ body{
   font-weight: 600;
   line-height: 45px;
   letter-spacing: 0em;
+  margin-bottom: 50px;
 } 
-.others .reviews-ratings .reviews-column{
-  display: flex;
-  flex-direction: row;
-  gap: 20px;
-  margin-top: 60px;
-  overflow-x: scroll;
-}
 
-.others .reviews-ratings .reviews-column .reviews{
+.others .reviews-ratings .reviews{
   width: 250px;
   height: 290px;
   padding: 27px;
@@ -444,7 +438,7 @@ body{
   box-shadow: 0px 4px 8px rgba(51, 51, 51, 0.1);
   border-radius: 12px;
 }
-.others .reviews-ratings .reviews-column .reviews .author{
+.others .reviews-ratings  .reviews .author{
   position: relative;
   left: 85px;
   bottom: 70px;
@@ -456,7 +450,7 @@ body{
   text-align: left;
 
 }
-.others .reviews-ratings .reviews-column .reviews .occupation{
+.others .reviews-ratings .reviews .occupation{
   position: relative;
   bottom: 45px;
   right: 30px;
@@ -467,7 +461,7 @@ body{
   letter-spacing: 0em;
   color: #AEADAE;
 }
-.others .reviews-ratings .reviews-column .reviews p{
+.others .reviews-ratings .reviews p{
   font-size: 16px;
   font-weight: 400;
   line-height: 26px;
@@ -475,7 +469,7 @@ body{
   text-align: left;
   margin-top: -10px;
 }
-.others .reviews-ratings .reviews-column .reviews .stars{
+.others .reviews-ratings .reviews .stars{
   position: relative;
   top: 10px;
 }
