--- a/src/index.css
+++ b/src/index.css
@@ -637,7 +637,7 @@ body{
     color: #ffffff;
     margin-left: 40px;
   }
-.background{
+.form-container{
   margin: 35px auto;
   width: 636px;
   height: 720px;
