--- a/src/index.css
+++ b/src/index.css
@@ -637,6 +637,14 @@ body{
     color: #ffffff;
     margin-left: 40px;
   }
+.background{
+  z-index: 1;
+  background-color: rgba(164,174,168, 0.4);
+  margin-top: -20px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
 .form-container{
   margin: 35px auto;
   width: 636px;
@@ -644,6 +652,7 @@ body{
   background-color: #ffffff;
   border-radius: 18px;
   box-shadow: 0px 6px 8px rgba(51, 51, 51, 0.1);
+  z-index: 3;
 }
 .page-content h2{
   text-align: center;
