--- a/src/index.css
+++ b/src/index.css
@@ -776,8 +776,20 @@ body{
 .swiper-pagination {
   position: absolute !important;
   text-align: center;
-  top: 500px !important;
+  top: 400px !important;
   transition: 300ms opacity;
   transform: translate3d(0, 0, 0);
   z-index: 10 !important;
+}
+
+.swiper-slide,
+swiper-slide {
+  flex-shrink: 0;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transition-property: transform;
+  display: block;
+  object-fit: fill !important;
+  margin-bottom: 200px !important;
 }
