--- a/src/index.css
+++ b/src/index.css
@@ -411,6 +411,7 @@ body{
   border-radius: 32px;
   font-size: 18px;
   padding-left: 18px;
+  text-indent: 30px;
 }
 .others .reviews-ratings{
   padding-left: 35px;
