--- a/src/index.css
+++ b/src/index.css
@@ -524,7 +524,8 @@ body{
 }
 .others div .your-review textarea{
   border-radius: 30px 0 0 30px;
-  border: 1px solid #5E5A5E;
+  border: 1.2px solid #5E5A5E;
+  outline: none;
 }
 
 .footer{
