--- a/src/index.css
+++ b/src/index.css
@@ -517,6 +517,7 @@ body{
   padding: 17.5px;
   position: relative;
   bottom: 20.1px;
+  right: 0.7px;
   border-radius: 0 30px 30px 0;
   background-color: #19CC56;
   color: #ffffff;
@@ -525,6 +526,9 @@ body{
 .others div .your-review button:hover{
   background-color: #ffffff;
   color: #19CC56;
+  border: 1px solid #19CC56;
+  transition-duration: 0.8s;
+  transition-delay: 0.1s;
 }
 .others div .your-review textarea{
   border-radius: 30px 0 0 30px;
