--- a/src/index.css
+++ b/src/index.css
@@ -619,9 +619,9 @@ body{
   padding-top: 40px;
   padding-bottom: 40px;
 }
-.background img{
+/* .background img{
   margin-left: 45px;
-}
+} */
 .form-container{
   margin: 35px auto;
   width: 636px;
