--- a/src/index.css
+++ b/src/index.css
@@ -15,44 +15,45 @@ body{
 }
 
 /* Header */
-.landing > header > img{
+@media(min-width: 1000px){
+  .landing > header > img{
   width: 86px;
   height: 40px;
   margin-top: 36px;
   background: none;
-}
-.landing{
+  }
+  .landing{
   width: 1215px;
   margin: 0 auto ;
-}
-.landing > header{
+  }
+  .landing > header{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-}
-.landing > header > div{
+  }
+  .landing > header > div{
   margin-top: 36px;
-}
-.landing > header > nav{
+  }
+  .landing > header > nav{
   margin-top: 40px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-}
-.landing >header > nav> a{
+  }
+  .landing >header > nav> a{
   text-decoration: none;
   margin-left: 52.5px;
   font-size: 20px;
   line-height: 30px;
   font-weight: 400;
   color: #353135;
-}
-.landing >header > nav> a:hover{
+  }
+  .landing >header > nav> a:hover{
   scale: 1.2;
   transition-duration: 0.5s;
   transition-delay: 1ms;
-}
-.landing >header > nav> select{
+  }
+  .landing >header > nav> select{
   text-decoration: none;
   margin-left: 52.5px;
   font-size: 20px;
@@ -64,19 +65,19 @@ body{
   margin-top: -8px;
   background: none;
   outline: none;
-}
-.landing >header > nav> select:hover{
+  }
+  .landing >header > nav> select:hover{
   scale: 1.1;
   transition-duration: 0.5s;
   transition-delay: 1ms;
   outline: none;
   border: none;
-}
-.landing >header > nav> select > option{
+  }
+  .landing >header > nav> select > option{
   border: none;
   outline: none;
-}
-.landing > header > div > a{
+  }
+  .landing > header > div > a{
   text-decoration: none;
   margin-left: 22.5px;
   padding: 6.5px 52px;
@@ -88,12 +89,13 @@ body{
   border: 2px solid #19CC56;
   color: #19CC56;
   }
-.landing > header > div > a:hover{
+  .landing > header > div > a:hover{
   background: #19CC56;
   color: #ffffff;
   scale: 2;
   transition-duration: 1ms;
   transition-duration: 1s;
+  }
 }
 .home1 img{
   width: 636px;
