--- a/src/index.css
+++ b/src/index.css
@@ -100,12 +100,15 @@ body{
 }
 
 @media(max-width: 1250px){
-  .landing > header > img{
+  /* .landing > header > img{
     width: 86px;
     height: 40px;
     margin-top: 36px;
     background: none;
     margin-left: 20px;
+    } */
+    body{
+      padding: 20px;
     }
 }
 
