--- a/src/index.css
+++ b/src/index.css
@@ -109,6 +109,68 @@ background: none;
     .landing > header > div{
       margin-top: 18px;
     }
+    /* .landing > header > nav{
+      margin-top: 40px;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      }
+      .landing >header > nav> a{
+      text-decoration: none;
+      margin-left: 52.5px;
+      font-size: 20px;
+      line-height: 30px;
+      font-weight: 400;
+      color: #353135;
+      }
+      .landing >header > nav> a:hover{
+      scale: 1.2;
+      transition-duration: 0.5s;
+      transition-delay: 1ms;
+      }
+      .landing >header > nav> select{
+      text-decoration: none;
+      margin-left: 52.5px;
+      font-size: 20px;
+      line-height: 30px;
+      font-weight: 400;
+      color: #353135;
+      border: none;
+      width: 100px;
+      margin-top: -8px;
+      background: none;
+      outline: none;
+      }
+      .landing >header > nav> select:hover{
+      scale: 1.1;
+      transition-duration: 0.5s;
+      transition-delay: 1ms;
+      outline: none;
+      border: none;
+      }
+      .landing >header > nav> select > option{
+      border: none;
+      outline: none;
+      }
+      .landing > header > div > a{
+      text-decoration: none;
+      margin-left: 22.5px;
+      padding: 6.5px 52px;
+      font-size: 22px;
+      font-weight: 600;
+      letter-spacing: 0em;
+      text-align: left;
+      border-radius: 16px;
+      border: 2px solid #19CC56;
+      color: #19CC56;
+      }
+      .landing > header > div > a:hover{
+      background: #19CC56;
+      color: #ffffff;
+      scale: 2;
+      transition-duration: 1ms;
+      transition-duration: 1s;
+      } */
 }
 
 /* Homepage */
