--- a/src/index.css
+++ b/src/index.css
@@ -104,7 +104,7 @@ background: none;
       padding: 20px;
     }
     .landing > header > img{
-      margin-top: 0;
+      margin-top: 5px;
     }
     .landing > header > div{
       margin-top: 16px;
