--- a/src/index.css
+++ b/src/index.css
@@ -102,7 +102,7 @@ background: none;
 @media(max-width: 1250px ){
     body{
       padding: 20px;
-      display: none;
+      /* display: none; */
     }
     .landing > header > img{
       margin-top: 14px;
