--- a/src/index.css
+++ b/src/index.css
@@ -101,7 +101,7 @@ background: none;
 
 @media(max-width: 1250px ){
     body{
-      display: none;
+      /* display: none; */
       /* padding: 20px; */
       /* display: none; */
     }
