--- a/src/index.css
+++ b/src/index.css
@@ -243,7 +243,7 @@ body{
 }
 
 /* what we do */
-.services > .what-we-do{
+.what-we-do{
   padding-left: 65px;
   padding-right: 65px;
   background-color: #ffffff;
