--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body{
 .landing > header > img{
   width: 86px;
   height: 40px;
-  margin-top: 35.5px;
+  margin-top: 25.5px;
   background: none;
 }
 
@@ -33,10 +33,10 @@ body{
     margin: 0 auto ;
   }
   .landing > header > div{
-    margin-top: 36px;
+    margin-top: 26px;
   }
   .landing > header > nav{
-    margin-top: 40px;
+    margin-top: 32px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -44,8 +44,8 @@ body{
   .landing >header > nav> a{
     text-decoration: none;
     margin-left: 52.5px;
-    font-size: 20px;
-    line-height: 30px;
+    font-size: 18px;
+    line-height: 24px;
     font-weight: 400;
     color: #353135;
   }
@@ -57,8 +57,8 @@ body{
   .landing >header > nav> select{
     text-decoration: none;
     margin-left: 52.5px;
-    font-size: 20px;
-    line-height: 30px;
+    font-size: 18px;
+    line-height: 24px;
     font-weight: 400;
     color: #353135;
     border: none;
@@ -186,45 +186,60 @@ body{
   height: 832px;
   margin-top: 40px;
   margin-bottom: 30px; */
-  width: 318px;
-  height: 416px;
-  margin-top: 20px;
-  margin-bottom: 15px;
+  /* width: 453.4px; */
+  /* width: 463.4px; */
+  width: 493.4px;
+  height: 578.8px;
+  margin-top: 8px;
+
 }
 .home1{
   display:flex;
   flex-direction: row;
-  gap: 60px;
+  /* gap: 50px; */
+  gap: 20px;
 }
 .home1 .home-text{
-  margin-top: 85px;
+  margin-top: 120px;
+  /* margin-left: 70px; */
 }
 .home1 .home-text .first-text{
-  font-size: 64px;
+  /* font-size: 64px;
   width: 520px;
   font-weight: 600;
-  line-height: 80px;
+  line-height: 80px; */
+  font-size: 46px;
+  width: 700px;
+  font-weight: 600;
+  line-height: 54px;
   color: #353135;
 }
 .home1 .home-text .second-text{
-  margin-top: 24px;
+  /* margin-top: 24px;
   width: 505px;
   font-size: 28px;
   line-height: 38px;
+  font-weight: 400;
+  color: #5E5A5E; */
+  margin-top: 14px;
+  width: 580px;
+  font-size: 22px;
+  line-height: 34px;
   font-weight: 400;
   color: #5E5A5E;
 }
 .home1 .home-text div{
   display: flex;
   flex-direction: row;
-  margin-top: 51px;
-  gap: 24px; 
+  /* margin-top: 51px; */
+  margin-top: 25px;
+  gap: 22px; 
 }
 .home1 .home-text div a{
   padding: 14.5px 22px;
   text-decoration: none;
   font-weight: 600;
-  font-size: 28px;  
+  font-size: 24px;  
   line-height: 35px;
   border-radius: 12px;
   border: 2px solid #19CC56;
