--- a/src/index.css
+++ b/src/index.css
@@ -188,7 +188,7 @@ body{
   margin-bottom: 30px; */
   /* width: 453.4px; */
   /* width: 463.4px; */
-  width: 493.4px;
+  width: 503.4px;
   height: 578.8px;
   margin-top: 8px;
 
@@ -197,11 +197,11 @@ body{
   display:flex;
   flex-direction: row;
   /* gap: 50px; */
-  gap: 20px;
+  gap: 40px;
 }
 .home1 .home-text{
   margin-top: 120px;
-  /* margin-left: 70px; */
+  margin-left: 25px;
 }
 .home1 .home-text .first-text{
   /* font-size: 64px;
@@ -209,7 +209,7 @@ body{
   font-weight: 600;
   line-height: 80px; */
   font-size: 46px;
-  width: 700px;
+  width: 640px;
   font-weight: 600;
   line-height: 54px;
   color: #353135;
@@ -221,10 +221,10 @@ body{
   line-height: 38px;
   font-weight: 400;
   color: #5E5A5E; */
-  margin-top: 14px;
+  margin-top: 12px;
   width: 580px;
   font-size: 22px;
-  line-height: 34px;
+  line-height: 30px;
   font-weight: 400;
   color: #5E5A5E;
 }
