--- a/src/index.css
+++ b/src/index.css
@@ -197,10 +197,10 @@ body{
   display:flex;
   flex-direction: row;
   /* gap: 50px; */
-  gap: 60px;
+  gap: 20px;
 }
 .home1 .home-text{
-  margin-top: 135px;
+  margin-top: 150px;
   margin-left: 5px;
 }
 .home1 .home-text .first-text{
@@ -208,10 +208,10 @@ body{
   width: 520px;
   font-weight: 600;
   line-height: 80px; */
-  font-size: 52px;
-  width: 640px;
+  font-size: 44px;
+  width: 680px;
   font-weight: 600;
-  line-height: 62px;
+  line-height: 54px;
   color: #353135;
 }
 .home1 .home-text .second-text{
@@ -222,9 +222,9 @@ body{
   font-weight: 400;
   color: #5E5A5E; */
   margin-top: 12px;
-  width: 580px;
-  font-size: 22px;
-  line-height: 30px;
+  width: 500px;
+  font-size: 16px;
+  line-height: 24px;
   font-weight: 400;
   color: #5E5A5E;
 }
@@ -236,10 +236,12 @@ body{
   gap: 22px; 
 }
 .home1 .home-text div a{
-  padding: 14.5px 22px;
+  /* padding: 14.5px 22px; */
+  padding: 5.5px 20px;
   text-decoration: none;
-  font-weight: 600;
-  font-size: 24px;  
+  /* font-weight: 600; */
+  /* font-size: 24px;   */
+  font-size: 18px;  
   line-height: 35px;
   border-radius: 12px;
   border: 2px solid #19CC56;
