--- a/src/index.css
+++ b/src/index.css
@@ -194,9 +194,9 @@ body{
 
 }
 .home1{
+  /* gap: 50px; */
   display:flex;
   flex-direction: row;
-  /* gap: 50px; */
   gap: 20px;
 }
 .home1 .home-text{
@@ -229,18 +229,18 @@ body{
   color: #5E5A5E;
 }
 .home1 .home-text div{
+  /* margin-top: 51px; */
   display: flex;
   flex-direction: row;
-  /* margin-top: 51px; */
   margin-top: 25px;
   gap: 22px; 
 }
 .home1 .home-text div a{
   /* padding: 14.5px 22px; */
-  padding: 5.5px 20px;
-  text-decoration: none;
   /* font-weight: 600; */
   /* font-size: 24px;   */
+  padding: 5.5px 20px;
+  text-decoration: none;
   font-size: 18px;  
   line-height: 35px;
   border-radius: 12px;
@@ -268,12 +268,12 @@ body{
   padding-right: 65px;
   background-color: #ffffff;
   margin-top: 20px;
-  padding-top: 100px;
-  padding-bottom: 120px;
+  padding-top: 60px;
+  padding-bottom: 20px;
 }
 .services .what-we-do h3{
   text-align: center;
-  font-size: 36px;
+  font-size: 28px;
   font-weight: 600;
   line-height: 45px;
   letter-spacing: 0em;
@@ -288,10 +288,11 @@ body{
   height: 300px; 
   display: block;
   padding: 30px;
-  margin-top: 80px;
+  margin-top: 40px;
   background: linear-gradient(90deg, rgba(241, 255, 246, 0.86) 0%, rgba(248, 248, 248, 0.86) 101.67%);
   box-shadow: 0px 4px 12px rgba(51, 51, 51, 0.1);
   border-radius: 12px;
+  scale: 0.95;
 }
 .services .what-we-do div .items img{
   position: relative;
@@ -307,11 +308,11 @@ body{
   font-size: 28px;
   line-height: 40px;
   margin-top: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   color: #353135;
 }
 .services .what-we-do div a .items p{
-  font-weight: 400;
+  /* font-weight: 400; */
   font-size: 17px;
   line-height: 25px;
   text-align: left;
@@ -330,7 +331,7 @@ body{
 .services .trending h3{
   text-align: center;
   font-weight: 600;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 45px;
   margin-bottom: 60px;
 }
@@ -355,6 +356,10 @@ body{
 .t-book .t-img{
   background-color: #E2E2E2B2;
   height: 350px;
+}
+.trending-swiper{
+  scale: 0.89;
+  margin-top: -70px;
 }
 .t-book .t-img1{
   background-color: #E2E2E2B2;
