--- a/src/index.css
+++ b/src/index.css
@@ -732,13 +732,17 @@ body{
   padding-bottom: 40px;
 }
 .form-container{
-  margin: 35px auto;
+  /* margin: 35px auto; */
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -100px;
   width: 636px;
   height: 720px;
   background-color: #ffffff;
   border-radius: 18px;
   box-shadow: 0px 6px 8px rgba(51, 51, 51, 0.1);
   z-index: 3;
+  scale: 0.85;
 }
 .page-content h2{
   text-align: center;
